<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommentActivity">
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/back"
    android:src="@drawable/ic_baseline_arrow_back_24"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_margin="25dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/comments"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="@+id/back"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        android:text="@string/comments"
        android:layout_marginStart="15dp"
        android:textColor="#807E7E"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back"
        android:layout_margin="15dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/profileimage"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/posterName"
        app:layout_constraintTop_toTopOf="@+id/profileImage"
        app:layout_constraintStart_toEndOf="@+id/profileImage"
        android:text="@string/ayush_aggarwal"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        android:textColor="@color/black" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/posterTime"
        app:layout_constraintStart_toEndOf="@+id/profileImage"
        app:layout_constraintBottom_toBottomOf="@+id/profileImage"
        android:text="@string/_2_hours_ago"
        android:layout_marginStart="10dp"
        android:textSize="13sp"
        android:textColor="#717171"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/postType"
        app:layout_constraintStart_toEndOf="@+id/posterName"
        app:layout_constraintTop_toTopOf="@+id/posterName"
        android:text="@string/question"
        android:background="@drawable/textview_background"
        android:textColor="@color/purple_700"
        android:layout_marginStart="10dp"
        android:padding="5dp"
        android:textSize="15sp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/more_horiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/posterName"
        android:layout_marginEnd="10dp"
        android:src="@drawable/more_horiz"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/caption"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="@string/comment_caption"
        app:layout_constraintStart_toStartOf="@+id/profileImage"
        app:layout_constraintTop_toBottomOf="@+id/profileImage"
        android:layout_marginTop="13dp"

        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:src="@drawable/loadimages"
        android:scaleType="fitXY"
        app:layout_constraintTop_toBottomOf="@+id/caption"/>
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
     android:text="@string/_47_comments"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/post"
      android:layout_marginStart="15dp"
      android:layout_marginTop="8dp"
      />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_unfold_more_24"
        app:layout_constraintTop_toTopOf="@+id/recent"
        app:layout_constraintBottom_toBottomOf="@+id/recent"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@+id/recent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent"
        android:id="@+id/recent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post"
        android:layout_marginEnd="15sp"
        android:layout_marginTop="8dp"
        android:textColor="#0027FF"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/commentecyclerview"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recent"/>
</androidx.constraintlayout.widget.ConstraintLayout>