<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/profileimage"
       />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/posterName"
        app:layout_constraintTop_toTopOf="@+id/profileImage"
        app:layout_constraintStart_toEndOf="@+id/profileImage"
        android:text="@string/ayush_aggarwal"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        android:textColor="@color/black" />
       <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/posterTime"
        app:layout_constraintStart_toEndOf="@+id/profileImage"
        app:layout_constraintBottom_toBottomOf="@+id/profileImage"
        android:text="@string/_2_hours_ago"
        android:layout_marginStart="10dp"
        android:textSize="13sp"
        android:textColor="#717171"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/postType"
        app:layout_constraintStart_toEndOf="@+id/posterName"
        app:layout_constraintTop_toTopOf="@+id/posterName"
        android:text="@string/question"
        android:background="@drawable/textview_background"
        android:textColor="@color/purple_700"
        android:layout_marginStart="10dp"
        android:padding="5dp"
        android:textSize="12sp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/more_horiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/posterName"
        android:layout_marginEnd="10dp"
        android:src="@drawable/more_horiz"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/caption"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/just_landed_on_urvar"
        app:layout_constraintStart_toStartOf="@+id/profileImage"
        app:layout_constraintTop_toBottomOf="@+id/profileImage"
        android:layout_marginTop="5dp"

        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:src="@drawable/loadimages"
        android:scaleType="fitXY"
        app:layout_constraintTop_toBottomOf="@+id/caption"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/likeLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post"
        android:orientation="horizontal"
        android:layout_marginTop="13dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        app:layout_constraintHorizontal_chainStyle="spread">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/like"
            android:tag="unset"
            android:id="@+id/likeImage"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_121_likes"
            android:id="@+id/likeCount"
            android:layout_marginStart="5dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/commentLayout"
        app:layout_constraintStart_toEndOf="@+id/likeLayout"
        app:layout_constraintTop_toBottomOf="@+id/post"
        app:layout_constraintEnd_toStartOf="@+id/shareLayout"
        android:orientation="horizontal"
        android:layout_marginTop="13dp"
        android:gravity="center"
        app:layout_constraintHorizontal_chainStyle="spread">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_outline_mode_comment_24"
            android:id="@+id/commentImage"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_47_comments"
            android:layout_marginStart="5dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shareLayout"
       app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post"
        android:orientation="horizontal"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        app:layout_constraintHorizontal_chainStyle="spread">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share"
            android:id="@+id/shareImage"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:layout_marginStart="5dp"

            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>