<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/profileimage"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/posterName"
        app:layout_constraintTop_toTopOf="@+id/profileImage"
        app:layout_constraintStart_toEndOf="@+id/profileImage"
        android:text="@string/ayush_aggarwal"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        android:textColor="@color/black" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/posterTime"
        app:layout_constraintStart_toEndOf="@+id/profileImage"
        app:layout_constraintBottom_toBottomOf="@+id/profileImage"
        android:text="@string/publicc"
        android:layout_marginStart="10dp"
        android:textSize="13sp"
        android:textColor="#717171"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/more_vert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/posterName"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_baseline_more_vert_24"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/caption"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="@string/comment_caption"
        app:layout_constraintStart_toStartOf="@+id/profileImage"
        app:layout_constraintTop_toBottomOf="@+id/profileImage"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/likeLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caption"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:gravity="center">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/like"
        android:tag="unset"
        android:id="@+id/likeImage"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/likes"
        android:layout_marginStart="10dp"
        />
    </LinearLayout>
    <View
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/likeLayout"
        android:layout_marginTop="13dp"
        android:background="#787878"/>
</androidx.constraintlayout.widget.ConstraintLayout>